[gd_scene load_steps=7 format=3 uid="uid://bk1xw3jfbpren"]

[ext_resource type="Texture2D" uid="uid://mvobaj86kyhf" path="res://assets/objs/pressure_switch.png" id="1_61w16"]
[ext_resource type="Script" path="res://objs/pressure_switch/pressure_switch.gd" id="1_jhwfn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qmt04"]
size = Vector2(32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ujya"]
atlas = ExtResource("1_61w16")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8yc0"]
atlas = ExtResource("1_61w16")
region = Rect2(32, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_p6xdd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ujya")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8yc0")
}],
"loop": true,
"name": &"pressed",
"speed": 5.0
}]

[node name="pressure_switch" type="Area2D"]
script = ExtResource("1_jhwfn")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qmt04")

[node name="animated_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p6xdd")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
